# prj001-chatgpt

./: README.md
apple/chatgpt-game-0/: main.cpp
apple/chatgpt-game-0.xcodeproj/: project.pbxproj
apple/chatgpt-game-0.xcodeproj/project.xcworkspace/xcuserdata/johannes.xcuserdatad/: UserInterfaceState.xcuserstate
apple/chatgpt-game-0.xcodeproj/xcshareddata/xcschemes/: chatgpt-game-0.xcscheme
apple/chatgpt-game-0.xcodeproj/xcuserdata/johannes.xcuserdatad/xcschemes/: xcschememanagement.plist
win64/: CMakeLists.txt  main.cpp
win64/Frameworks/SDL2.framework/: SDL2
win64/Frameworks/SDL2.framework/Versions/A/Headers/: SDL_opengl_glext.h
win64/Frameworks/SDL2_image.framework/Headers/: SDL_image.h
win64/Frameworks/SDL2_image.framework/Resources/: Info.plist
win64/Frameworks/SDL2_image.framework/Versions/A/_CodeSignature/: CodeResources
win64/Frameworks/SDL2_mixer.framework/Versions/A/Headers/: SDL_mixer.h
win64/Frameworks/SDL2_mixer.framework/Versions/A/Resources/: Info.plist
win64/Frameworks/SDL2_mixer.framework/Versions/Current/_CodeSignature/: CodeResources
win64/Frameworks/SDL2_ttf.framework/: SDL2_ttf
win64/Frameworks/SDL2_ttf.framework/Versions/A/Headers/: SDL_ttf.h
win64/Frameworks/SDL2_ttf.framework/Versions/A/Resources/: Info.plist
win64/Frameworks/SDL2_ttf.framework/Versions/A/_CodeSignature/: CodeResources
win64/include/SDL2/: SDL_config.h.cmake  SDL_config.h.in  SDL_config_android.h  SDL_config_iphoneos.h  SDL_config_macosx.h
